anotações swagger para put
