# src/routes/professionalRoutes.js
@@ -147,6 +147,17 @@ router.post("/", (req, res) => {
 });
 
 router.put("/:id", (req, res) => {
+  /*  #swagger.requestBody = {
+        required: true,
+        content: {
+        "application/json": {
+          schema: {
+            $ref: "#/components/schemas/professional"
+          }
+        }
+      }
+    }
+  */
   let prof = db
     .getDB("professional")
     .find((el) => el.id == parseInt(req.params.id));
